deploy/oberon/inference-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ovms-granite-2b
  namespace: fleet-llm-d
  labels:
    app: ovms-granite-2b
    fleet.llm-d.ai/purpose: cross-cluster-inference
  annotations:
    haproxy.router.openshift.io/timeout: 180s
    haproxy.router.openshift.io/haproxy.health.check.interval: 5s
spec:
  host: ovms-granite-2b-fleet-llm-d.apps.oberon.fm2aihpcsed.com
  to:
    kind: Service
    name: ovms-granite-2b
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDUTCCAjmgAwIBAgIIL3iTtsSzyTQwDQYJKoZIhvcNAQELBQAwNjE0MDIGA1UE
[...]
      97Zffao6HzHFSfLjRDBwi+xxM6on3iCeDHxe+WoAnSt7I5TxHA==
      -----END CERTIFICATE-----
